--- a/styles/verilog.css
+++ b/styles/verilog.css
@@ -7,9 +7,9 @@
     --mainBorderColor-light:rgb(218, 218, 218);
     --mainBgColor-light:rgb(249, 250,251);
 
-    --mainTextColor-dark:#fff;
-    --secondaryTextColor-dark:#ced7d7;
-    --mainLinkColor-dark:rgb(30, 190,214);
+    --mainTextColor-dark:#c3f3ff;
+    --secondaryTextColor-dark:#ffffff;
+    --mainLinkColor-dark:rgb(243, 170, 69);
     --mainBorderColor-dark:#2b3031;
     --mainBgColor-dark:#131415;
 
