--- a/styles/verilog.css
+++ b/styles/verilog.css
@@ -58,11 +58,15 @@ li{
     padding-top: 1em;
     padding-bottom: 1em;
 }
-
 #wrapper--hero{
     display: flex;
     align-items: center;
     gap: 4em;
+}
+#wrapper--ero{
+    align-items: center;
+    gap: 4em;
+    font-size: 1.1em;
 }
 
 #bio, a{
@@ -147,6 +151,14 @@ li{
     align-items: center;
 }
 
+.card--tehstack{
+    
+    border-radius: 10px;
+    padding: 0.5em 1.2em;
+    align-items: center;
+    text-align: center;
+}
+
 .card--project{
     padding-top: 1em;
     padding-bottom: 1em;
@@ -214,3 +226,4 @@ li{
         padding-left: 0;
     }
 }
+
